--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.7.6",
+    "@ckeditor/ckeditor5-basic-styles": "^16.0.0",
+    "@ckeditor/ckeditor5-build-inline": "^16.0.0",
+    "@ckeditor/ckeditor5-editor-inline": "^16.0.0",
+    "@ckeditor/ckeditor5-react": "^2.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
-    "quill": "^1.3.6",
+    "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-email-editor": "^1.0.0",
+    "react-froala-wysiwyg": "^3.1.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
@@ -38,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^16.0.0"
   }
 }
