--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-froala-wysiwyg": "^3.1.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
