--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=4000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,4 +49,5 @@
   "devDependencies": {
     "@ckeditor/ckeditor5-alignment": "^16.0.0"
   }
+ 
 }
